# FlipkartCartBot

./: .gitignore  .replit  app.py  config.json  flipkart_automation.py  models.py  pyproject.toml  replit.md  run_automation.py  session_manager.py  session_persistence.py  web_control_panel.py
attached_assets/: Pasted--2025-09-17-20-44-01-625-INFO-Chrome-WebDriver-initialized-with-session-persistence-2-14-05-A-1758142120504_1758142120505.txt
static/css/: styles.css
static/js/: control-panel.js
templates/: index.html
